[project]
name = "new-file-reranger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.97.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
]
